--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
        <nav>
-        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <h3 class="nav-title">Sabb<span class="text-primary">i</span>r</h3>
 
         <ul>
             <li><a href="">Portfolio</a></li>
